[gd_scene load_steps=85 format=2]

[ext_resource path="res://Action/Player/Idle/Idle_001.png" type="Texture" id=1]
[ext_resource path="res://Action/Player/Idle/Idle_010.png" type="Texture" id=2]
[ext_resource path="res://Action/Player/Idle/Idle_008.png" type="Texture" id=3]
[ext_resource path="res://Action/Player/Idle/Idle_005.png" type="Texture" id=4]
[ext_resource path="res://Action/Player/Idle/Idle_006.png" type="Texture" id=5]
[ext_resource path="res://Action/Player/Idle/Idle_009.png" type="Texture" id=6]
[ext_resource path="res://Action/Player/Idle/Idle_004.png" type="Texture" id=7]
[ext_resource path="res://Action/Player/Idle/Idle_002.png" type="Texture" id=8]
[ext_resource path="res://Action/Player/Idle/Idle_007.png" type="Texture" id=9]
[ext_resource path="res://Action/Player/Idle/Idle_011.png" type="Texture" id=10]
[ext_resource path="res://Action/Player/Idle/Idle_003.png" type="Texture" id=11]
[ext_resource path="res://Action/Player/Idle/Idle_000.png" type="Texture" id=12]
[ext_resource path="res://Script/Player.gd" type="Script" id=13]
[ext_resource path="res://Action/Player/Walking/Walking_000.png" type="Texture" id=14]
[ext_resource path="res://Action/Player/Walking/Walking_002.png" type="Texture" id=15]
[ext_resource path="res://Action/Player/Walking/Walking_001.png" type="Texture" id=16]
[ext_resource path="res://Action/Player/Walking/Walking_009.png" type="Texture" id=17]
[ext_resource path="res://Action/Player/Walking/Walking_010.png" type="Texture" id=18]
[ext_resource path="res://Action/Player/Walking/Walking_017.png" type="Texture" id=19]
[ext_resource path="res://Action/Player/Walking/Walking_011.png" type="Texture" id=20]
[ext_resource path="res://Action/Player/Walking/Walking_012.png" type="Texture" id=21]
[ext_resource path="res://Action/Player/Walking/Walking_014.png" type="Texture" id=22]
[ext_resource path="res://Action/Player/Walking/Walking_015.png" type="Texture" id=23]
[ext_resource path="res://Action/Player/Walking/Walking_013.png" type="Texture" id=24]
[ext_resource path="res://Action/Player/Walking/Walking_016.png" type="Texture" id=25]
[ext_resource path="res://Action/Player/Walking/Walking_007.png" type="Texture" id=26]
[ext_resource path="res://Action/Player/Walking/Walking_006.png" type="Texture" id=27]
[ext_resource path="res://Action/Player/Walking/Walking_004.png" type="Texture" id=28]
[ext_resource path="res://Action/Player/Walking/Walking_003.png" type="Texture" id=29]
[ext_resource path="res://Action/Player/Walking/Walking_005.png" type="Texture" id=30]
[ext_resource path="res://Action/Player/Walking/Walking_008.png" type="Texture" id=31]
[ext_resource path="res://Action/Player/Jump Loop/Jump Loop_005.png" type="Texture" id=32]
[ext_resource path="res://Action/Player/Jump Loop/Jump Loop_002.png" type="Texture" id=33]
[ext_resource path="res://Action/Player/Jump Loop/Jump Loop_003.png" type="Texture" id=34]
[ext_resource path="res://Action/Player/Jump Loop/Jump Loop_004.png" type="Texture" id=35]
[ext_resource path="res://Action/Player/Jump Loop/Jump Loop_000.png" type="Texture" id=36]
[ext_resource path="res://Action/Player/Jump Loop/Jump Loop_001.png" type="Texture" id=37]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_000.png" type="Texture" id=38]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_001.png" type="Texture" id=39]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_005.png" type="Texture" id=40]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_004.png" type="Texture" id=41]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_009.png" type="Texture" id=42]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_010.png" type="Texture" id=43]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_006.png" type="Texture" id=44]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_003.png" type="Texture" id=45]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_007.png" type="Texture" id=46]
[ext_resource path="res://Action/Player/Dying/Dying_008.png" type="Texture" id=47]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_008.png" type="Texture" id=48]
[ext_resource path="res://Action/Player/Casting Spells/Casting Spells_002.png" type="Texture" id=49]
[ext_resource path="res://Scence/Ball.tscn" type="PackedScene" id=50]
[ext_resource path="res://Action/Player/Dying/Dying_009.png" type="Texture" id=51]
[ext_resource path="res://Action/Player/Dying/Dying_007.png" type="Texture" id=52]
[ext_resource path="res://Action/Player/Dying/Dying_006.png" type="Texture" id=53]
[ext_resource path="res://Action/Player/Dying/Dying_000.png" type="Texture" id=54]
[ext_resource path="res://Action/Player/Dying/Dying_001.png" type="Texture" id=55]
[ext_resource path="res://Action/Player/Dying/Dying_005.png" type="Texture" id=56]
[ext_resource path="res://Action/Player/Dying/Dying_002.png" type="Texture" id=57]
[ext_resource path="res://Action/Player/Dying/Dying_003.png" type="Texture" id=58]
[ext_resource path="res://Action/Player/Dying/Dying_004.png" type="Texture" id=59]
[ext_resource path="res://Action/Player/Dying/Dying_014.png" type="Texture" id=60]
[ext_resource path="res://Action/Player/Dying/Dying_012.png" type="Texture" id=61]
[ext_resource path="res://Action/Player/Dying/Dying_010.png" type="Texture" id=62]
[ext_resource path="res://Action/Player/Dying/Dying_013.png" type="Texture" id=63]
[ext_resource path="res://Action/Player/Dying/Dying_011.png" type="Texture" id=64]
[ext_resource path="res://Action/Player/Hurt/Hurt_008.png" type="Texture" id=65]
[ext_resource path="res://Action/Player/Hurt/Hurt_006.png" type="Texture" id=66]
[ext_resource path="res://Action/Player/Hurt/Hurt_007.png" type="Texture" id=67]
[ext_resource path="res://Action/Player/Hurt/Hurt_003.png" type="Texture" id=68]
[ext_resource path="res://Action/Player/Hurt/Hurt_009.png" type="Texture" id=69]
[ext_resource path="res://Action/Player/Hurt/Hurt_010.png" type="Texture" id=70]
[ext_resource path="res://Action/Player/Hurt/Hurt_011.png" type="Texture" id=71]
[ext_resource path="res://Action/Player/Hurt/Hurt_005.png" type="Texture" id=72]
[ext_resource path="res://Action/Player/Hurt/Hurt_004.png" type="Texture" id=73]
[ext_resource path="res://Action/Player/Hurt/Hurt_001.png" type="Texture" id=74]
[ext_resource path="res://Action/Player/Hurt/Hurt_002.png" type="Texture" id=75]
[ext_resource path="res://Action/Player/Hurt/Hurt_000.png" type="Texture" id=76]
[ext_resource path="res://Music/BGM/男走2-LTT20070524.wav" type="AudioStream" id=78]
[ext_resource path="res://Music/BGM/shoot.wav" type="AudioStream" id=79]
[ext_resource path="res://Music/BGM/die.wav" type="AudioStream" id=80]
[ext_resource path="res://Music/BGM/hurt.wav" type="AudioStream" id=81]
[ext_resource path="res://Music/BGM/jump.wav" type="AudioStream" id=82]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 49 ), ExtResource( 45 ), ExtResource( 41 ), ExtResource( 40 ), ExtResource( 44 ), ExtResource( 46 ), ExtResource( 48 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": false,
"name": "Attack",
"speed": 30.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 55 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 56 ), ExtResource( 53 ), ExtResource( 52 ), ExtResource( 47 ), ExtResource( 51 ), ExtResource( 62 ), ExtResource( 64 ), ExtResource( 61 ), ExtResource( 63 ), ExtResource( 60 ) ],
"loop": false,
"name": "Die",
"speed": 15.0
}, {
"frames": [ ExtResource( 76 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 68 ), ExtResource( 73 ), ExtResource( 72 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 65 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ) ],
"loop": false,
"name": "Hurt",
"speed": 25.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 10 ) ],
"loop": true,
"name": "Idle",
"speed": 20.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 27 ), ExtResource( 26 ), ExtResource( 31 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 25 ), ExtResource( 19 ) ],
"loop": true,
"name": "run",
"speed": 20.0
}, {
"frames": [ ExtResource( 36 ), ExtResource( 37 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 32 ) ],
"loop": true,
"name": "jump",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 4.76954, 11.1566 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.16626, 1.15522 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 1.23001, 1.14465 )
script = ExtResource( 13 )
ball = ExtResource( 50 )
speed = 600
jumpHight = 600

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 1.90735e-06 )
scale = Vector2( 0.245937, 0.257639 )
frames = SubResource( 1 )
animation = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4.06501, 1.74726 )
scale = Vector2( 2.30117, 2.23494 )
z_index = 1
shape = SubResource( 4 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 40.6501, 0.87363 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -40.6501, 0 )

[node name="Coldtime" type="Timer" parent="."]

[node name="PlayerFoot" type="Area2D" parent="."]
collision_layer = 7
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerFoot"]
position = Vector2( 4.06501, 29.7034 )
scale = Vector2( 2.53681, 2.26873 )
z_index = 1
shape = SubResource( 5 )

[node name="Position" type="Position2D" parent="."]
position = Vector2( 0.813002, -103.088 )

[node name="Sounds" type="Node2D" parent="."]

[node name="Walk" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 78 )

[node name="Die" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 80 )

[node name="Hurt" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 81 )

[node name="Jump" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 82 )

[node name="Shoot" type="AudioStreamPlayer2D" parent="Sounds"]
stream = ExtResource( 79 )

[node name="NoHurt" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="Coldtime" to="." method="_on_Coldtime_timeout"]
[connection signal="body_entered" from="PlayerFoot" to="." method="_on_Area2D_body_entered"]
[connection signal="finished" from="Sounds/Walk" to="." method="_on_Walk_finished"]
[connection signal="timeout" from="NoHurt" to="." method="_on_NoHurt_timeout"]
